--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.3",
+        "phpoffice/phpword": "^1.3",
         "spatie/laravel-sitemap": "^7.0"
     },
     "require-dev": {
